# kosmic-lab-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  LICENSE  Makefile  Procfile  QUICKSTART.md  README.md  docker-compose.yml  flake.nix  noxfile.py  paper_9_kosmic_k_index.out  pyproject.toml
core/: bioelectric.py  (+11 more)
docs/papers/paper-6-or-index/experiments/cross_algorithm/: BOTH_OPTIONS_COMPLETE_SUMMARY.md  DAY_1_COMPLETE.md  DAY_2_PROGRESS_SUMMARY.md  DAY_3_CHECKPOINT_STATUS.md  DAY_3_CROSS_ALGORITHM_COMPLETE.md  DQN_TRAINING_COMPLETE.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  GPU_INSTALL_STATUS.md  GPU_MIGRATION_IN_PROGRESS.md  GPU_SETUP_PROPER.md  GPU_TRAINING_STATUS.md  GPU_TRAINING_SUCCESS.md  INTEGRATION_COMPLETE.md  INTEGRATION_INSTRUCTIONS.md  INTEGRATION_READY_SUMMARY.md  MANUAL_QMIX_TRAINING_GUIDE.md  MAPPO_TRAINING_LAUNCHED.md  QMIX_IMPLEMENTATION_COMPLETE.md  QMIX_RESULTS_SUMMARY.md  README.md  REPRODUCIBILITY.md  REVIEWER_FEEDBACK_APPLIED.md  REVIEWER_FEEDBACK_FIXES.md  ROADMAP_PROGRESS_UPDATE.md  SAC_TRAINING_LAUNCHED.md  SECTION_5_7_COMPLETE.md  SECTION_5_7_CROSS_ALGORITHM_VALIDATION.tex  SECTION_5_7_CROSS_ALGORITHM_VALIDATION_OLD.tex  SECTION_5_7_CROSS_ALGORITHM_VALIDATION_UPDATED.tex  SECTION_5_8_SC2_REAL_WORLD_VALIDATION.tex  SESSION_FINAL_STATUS.md  SESSION_FINAL_SUMMARY.md  SESSION_STATUS_2025_11_26.md  SESSION_SUMMARY_DAY_3.md  SESSION_SUMMARY_QMIX_IMPLEMENTATION.md  STATISTICAL_ANALYSIS_COMPLETE.md  STATUS.md  STATUS_UPDATE_DAY2.md  STATUS_UPDATE_SC2.md  (+42 more)
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_100/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_1000/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_200/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_300/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_400/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_500/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_600/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_700/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_800/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_123/episode_900/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_100/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_1000/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_200/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_300/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_400/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_500/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_600/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_700/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_800/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_42/episode_900/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_456/episode_100/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_456/episode_1000/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_456/episode_200/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_456/episode_300/: agent_0.pt  agent_1.pt  agent_2.pt
docs/papers/paper-6-or-index/experiments/cross_algorithm/checkpoints/dqn/seed_456/episode_400/: agent_0.pt  agent_1.pt  agent_2.pt
(+1190 files in other folders)
