[tool.poetry]
name = "cross-algorithm-experiments"
version = "0.1.0"
description = "Cross-algorithm robustness validation for O/R Index paper"
authors = ["Tristan Stoltz <tristan.stoltz@evolvingresonantcocreationism.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp311-cp311-linux_x86_64.whl"}
gymnasium = "^1.0.0"
pettingzoo = {extras = ["mpe"], version = "^1.24.0"}
pygame = "^2.6.0"
numpy = "^1.26.0"
tensorboard = "^2.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
