[tool.poetry]
name = "cross-algorithm-experiments"
version = "0.1.0"
description = "Cross-algorithm robustness validation for O/R Index paper"
authors = ["Tristan Stoltz <tristan.stoltz@evolvingresonantcocreationism.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = {version = "^2.5.0", source = "pytorch-gpu"}
gymnasium = "^1.0.0"
pettingzoo = {extras = ["mpe"], version = "^1.24.0"}
numpy = "^1.26.0"
tensorboard = "^2.18.0"
scipy = "^1.16.3"
matplotlib = "^3.10.7"
sc2reader = "^1.8.0"
mujoco = "^3.3.7"
scikit-learn = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
